refactor svg link in navbar + change font size to Roboto Slab

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
 body {
   margin: 0;
+  font-family: 'Roboto Slab', serif;
+
 }
 
 /* body, h1, h2, h3, h4, h5, h6, p, blockquote, figure, dl, dd, ul, ol, li, pre, table, th, td {
