--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@ body {
 
 }
 
+input, button {
+  font-family: 'Roboto Slab' , serif;
+}
+
 /* body, h1, h2, h3, h4, h5, h6, p, blockquote, figure, dl, dd, ul, ol, li, pre, table, th, td {
   margin: 0;
   padding: 0;
